# OpenCVGlassDetection

./: CMakeLists.txt  README.md
algorithm/: CMakeLists.txt  ClassifyMachine.cpp  ClassifyMachine.h  HSAlgorithmInterface.cpp  HSAlgorithmInterface.h  MatchTemplate.cpp  MatchTemplate.h  OpenCVAlgorithm.cpp  OpenCVAlgorithm.h  RoundHole.cpp  RoundHole.h  Yolov8DL.cpp  Yolov8DL.h  algorithm.cpp  algorithm.h  processtile.cpp  processtile.cpp.fbdvaq  processtile.h
camare/: CMakeLists.txt  DVPCamera.h  DushenBasicFunc.cpp  DushenBasicFunc.h  HSCameraInterface.cpp  HSCameraInterface.h
database/: CMakeLists.txt  HSDatabaseInterface.cpp  HSDatabaseInterface.h  database.cpp  database.h
gpulib/: CMakeLists.txt  kernel.cu  kernel.h
jsoncpp/: CMakeLists.txt  HSJsoncppInterface.cpp  HSJsoncppInterface.h  assertions.h  config.h  forwards.h  json.h  json_features.h  json_reader.cpp  json_value.cpp  json_writer.cpp  jsoncpp.cpp  jsoncpp.h  reader.h  value.h  writer.h
log/: CMakeLists.txt
main/: CMakeLists.txt  Global.cpp  Global.h  HSThreadPool.h  HsListener.cpp  HsListener.h  MainForm.cpp  MainForm.h  MainForm.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
main/Form/: Calibrate.cpp  Calibrate.h  Calibrate.ui  DataAnalysis.cpp  DataAnalysis.h  DataAnalysis.ui  DushenCameraWidget.cpp  DushenCameraWidget.h  LightControl.cpp  LightControl.h  LightControl.ui  Login.cpp  Login.h  Login.ui  MyGraphicsitem.cpp  MyGraphicsitem.h
socket/: CMakeLists.txt  HSSocketInterface.cpp  HSSocketInterface.h  ParamComm.cpp  RegParasComm.cpp  SignalControlData.cpp  SignalControlData.h  Tcp.cpp  TcpPackComm.cpp
test/: CMakeLists.txt  main.cpp
tool/: CMakeLists.txt  HSTool.cpp  HSTool.h
